// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PickerToggler should be rendered correctly 1`] = `
<div
  className="container uui-input-box colorSky root size-36 mode-form"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="body"
  >
    <input
      aria-haspopup={true}
      autoComplete="no"
      className="uui-input singleInput"
      onChange={[Function]}
      tabIndex={-1}
      type="text"
      value=""
    />
  </div>
  <div
    className="actions"
  />
</div>
`;

exports[`PickerToggler should be rendered correctly with extra props 1`] = `
<div
  className="container uui-input-box -clickable colorSky root size-24 mode-cell"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="body multiline"
  >
    <button
      className="container uui-button-box uui-enabled root size-18 fill-solid color-night300 root"
      href={null}
      onClick={[Function]}
      role="button"
      tabIndex={-1}
    >
      <div
        className="container uui-icon uui-enabled -clickable -clickable"
        onClick={[Function]}
        style={Object {}}
      >
        <SvgrURL
          className=""
        />
      </div>
    </button>
    <input
      aria-haspopup={true}
      autoComplete="no"
      className="uui-input"
      onChange={[Function]}
      tabIndex={-1}
      type="text"
      value=""
    />
  </div>
  <div
    className="actions"
  >
    <div
      className="container uui-icon uui-enabled -clickable uui-icon-cancel -clickable"
      onClick={[Function]}
      style={Object {}}
      tabIndex={-1}
    >
      <SvgrURL
        className=""
      />
    </div>
  </div>
</div>
`;
